--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.6",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
