--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
