--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.8.4",
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.4.6",
+    "html-react-parser": "^5.2.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
