--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = http://localhost:5000
+# REACT_APP_BASE_URL=http://localhost:5000
+REACT_APP_BASE_URL=https://student-6of6d71qk-duchais-projects.vercel.app/
