--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.14.1",
     "mongoose": "^7.8.6",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "slugify": "^1.6.6"
   }
 }
