--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.8.6",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "socket.io": "^4.8.1"
   }
 }
