--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.8.4",
     "cloudinary": "^2.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.4.6",
