fix deloy feature share

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 # REACT_APP_BASE_URL=http://localhost:5000
 REACT_APP_BASE_URL=https://student-sys.vercel.app
+REACT_APP_DOMAIN_CHECK_LOCAL=1
+REACT_APP_FB_APP_ID=1355571308921954
