--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.4.6",
